// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Action Icon DOM Snapshot 1`] = `
<span
  className="slds-icon_container slds-icon_container_circle slds-icon-action-description"
>
  <svg
    aria-hidden="true"
    className="slds-icon slds-icon_small"
  >
    <use
      xlinkHref="/assets/icons/action-sprite/svg/symbols.svg#description"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Description of icon
  </span>
</span>
`;

exports[`Default Action Icon Right to Left (RTL) DOM Snapshot 1`] = `
<div
  dir="rtl"
>
  <span
    className="slds-icon_container slds-icon_container_circle slds-icon-action-description"
  >
    <svg
      aria-hidden="true"
      className="slds-icon slds-icon_small"
    >
      <use
        xlinkHref="/assets/icons/action-sprite/svg/symbols-rtl.svg#description"
      />
    </svg>
    <span
      className="slds-assistive-text"
    >
      Description of icon
    </span>
  </span>
</div>
`;
